    o	Some extreme cases of pbeta(log.p = TRUE) are more accurate
	(finite values < -700 rather than -Inf).  (PR#13786)

	pbeta() now reports on more cases where the asymptotic
	expansions lose accuracy (the underlying TOMS708 C code was
	ignoring some of these, including the PR#13786 example).

    o	new.env(hash = TRUE, size = NA)	 now works, the way it has been
	documented to for a long time.



		CHANGES IN R VERSION 2.9.1


NEW FEATURES

    o	New function anyDuplicated(x) returns 0 (= FALSE) or the index
	of the first duplicated entry of x.

    o	matplot(), matlines() and matpoints() now also obey a 'lend'
	argument, determining line end styles. (Wish of PR#13619).

    o	bw.SJ(), bw.bcv() and bw.ucv() now gain an optional 'tol'
	argument allowing more accurate estimates.

    o	new.packages() no longer regards packages with the same name
	as a member of an installed bundle as 'new' (this is now
	consistent with the dependency checks in install.packages()).

	It no longer reports on partially installed bundles (since
	members can be updated individually if a bundle is unbundled).

    o	old.packages() and hence updates.packages() will look for
	updates to members of package bundles before updates to the
	whole bundle: this allow bundles to be split and installations
	updated.

    o	nlminb() gives better non-convergence messages in some cases.

    o	S3 method dispatch will support S4 class inheritance for S3
	methods, for primitives and via UseMethod(), if the argument
	S3methods=TRUE is given to setClass().  S4 method dispatch
	will use S3 per-object inheritance if S3Class() is set on the
	object.  See ?Methods and the paper referenced there.

    o	R CMD INSTALL is more tolerant of (malformed) packages with a
	'man' directory but no validly named .Rd files.

    o	R CMD check now reports where options are used that cause some
	of the checks to be skipped.

    o	RSiteSearch has been updated to be consistent with the new