@@ -184,7 +184,19 @@ tk_choose.files <-
         args <- c(args, filetypes = paste(fff, collapse = " "))
     }
     res <- tclvalue(do.call(tcl, args))
-    if(nzchar(res)) strsplit(res, " ", fixed = TRUE)[[1]] else character()
+    if(nzchar(res))
+        if(multi) {
+            ## Filenames with spaces will be surrounded by { }
+            ans <- character()
+            pat <- "([^{])*\\{([^}]*)\\}(.*)"
+            while(grepl(pat, res)) {
+                ans <- c(ans, sub(pat, "\\2", res))
+                res <- sub(pat, "\\1\\3", res)
+            }
+            ans <- c(ans, strsplit(res, " ", fixed = TRUE)[[1]])
+            ans[nzchar(ans)]
+        } else res
+    else character()
 }
 
 
